# tobac

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  conda-requirements.txt  dev_requirements.txt  environment-ci.yml  environment-examples.yml  environment.yml  example_requirements.txt  pyproject.toml  requirements.txt  run_notebooks.sh  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  question.md  release.md
.github/workflows/: check_formatting.yml  check_json.yml  check_notebook.yml  check_notebooks.yml  codecov-CI.yml  codecov.yml  docker-codecov.yml  docker-image.yml  generate_notebooks.yml  matrix_ci.yml  publish-to-pypi.yml  pylint.yml
cloudtrack/: __init__.py  analysis.py  centerofgravity.py  cloudtrack.py  feature_detection.py  plotting.py  segmentation.py  tracking.py  utils.py  watershedding.py  wrapper.py
doc/: Testing-Sphinx-based-Rendering.md  analysis.rst  big_datasets.rst  code_reviews.rst  code_structure.rst  conf.py  contributing.rst  data_input.rst  environment.yml  examples.rst  feature_detection.rst  feature_detection_3D_out_vars.csv  feature_detection_base_out_vars.csv  feature_detection_output.rst  feature_detection_overview.rst  features_without_segmented_area.rst  index.md  index.rst  installation.rst  linking.rst  mentoring.rst  merge_split.rst  merge_split_out_vars.csv  merge_split_output_vars.rst  modules.rst  plotting.rst  publications.rst  requirements.txt  segmentation.rst  segmentation_out_vars_statistics.csv  segmentation_output.rst  segmentation_parameters.rst  testing_sphinx-based_rendering.rst  themes.rst  threshold_detection_parameters.rst  tobac.rst  tracking_base_out_vars.csv  tracking_output.rst  transform_segmentation.rst
doc/_static/: api_custom.css  blob_segmented.html  blob_three_timesteps.html  blobs_and_track.html  custom.css  detected_feature_pos.html  theme_overrides.css
doc/api/: index.rst
doc/big_datasets_examples/: index.rst
doc/bulk_statistics/: index.rst
doc/developer_guide/: branching_workflow.md  code_of_conduct.md  code_reviews.md  code_reviews.rst  code_structure.md  code_structure.rst  documentation.md  git_basics.md  index.md  index.rst  mentoring.md  mentoring.rst  testing_sphinx-based_rendering.md  testing_sphinx-based_rendering.rst  tests.md
doc/feature_detection/: index.rst
doc/get_help/: index.md
doc/getting_started/: data_input.md  data_input.rst  data_output.md  family_detection.md  feature_detection_overview.md  feature_detection_overview.rst  get_help.md  index.md  index.rst  installguide.md  installguide.rst  merge_split.md  plotting.md  plotting.rst  segmentation.md  tracking_basics.md  tracking_basics.rst
doc/themes/: tobac_v1.rst
doc/tracking/: 3D-Blob-Tracking_Example.ipynb  index.rst
doc/userguide/: analysis.md  analysis.rst  big_datasets.md  big_datasets.rst  faqs.md  feature_detection_3D_out_vars.csv  feature_detection_output.rst  features_without_segmented_area.rst  governance.md  index.md  index.rst  publications.md  publications.rst  segmentation_out_vars.csv  segmentation_output.rst  segmentation_parameters.rst  threshold_detection_parameters.rst  tracking_output.rst  whats_new.md
examples/: index.md  index.rst
examples/Basics/: Idealized-Case-1_Tracking-of-a-Test-Blob-in-2D.ipynb  Idealized-Case-2_Two_crossing_Blobs.ipynb  Idealized-Case-3_Tracking-of-a-Test-Blob-in-3D.ipynb  Idealized-Family-Detection.ipynb  Methods-and-Parameters-for-Feature-Detection_Part_1.ipynb  Methods-and-Parameters-for-Feature-Detection_Part_2.ipynb  Methods-and-Parameters-for-Linking.ipynb  Methods-and-Parameters-for-Segmentation.ipynb
examples/Example_ICON_MCS_tracking/: Example_ICON_MCS_tracking.ipynb
examples/Example_OLR_Tracking_model/: Example_OLR_Tracking_model.ipynb
examples/Example_OLR_Tracking_model_iris/: Example_OLR_Tracking_model_iris.ipynb
examples/Example_OLR_Tracking_model_latlon_tracking/: Example_OLR_Tracking_model_latlon_tracking.ipynb
examples/Example_OLR_Tracking_satellite/: Example_OLR_Tracking_satellite.ipynb
examples/Example_Precip_Tracking/: Example_Precip_Tracking.ipynb
examples/Example_Track_on_Radar_Segment_on_Satellite/: Example_Track_on_Radar_Segment_on_Satellite.ipynb  track_on_radar_segment_on_satellite.ipynb
examples/Example_Updraft_Tracking/: Example_Updraft_Tracking.ipynb
examples/Example_VIS_Tracking_Satellite/: Example_VIS_Tracking_Satellite.ipynb
examples/big_data_processing/: parallel_processing_tobac.ipynb
tobac/: ._segmentation.py  __init__.py  analysis.py  centerofgravity.py  feature_detection.py  merge_split.py  plotting.py  segmentation.py  testing.py  tracking.py  utils.py  wrapper.py
(+121 files in other folders)
